--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,12 +10,13 @@ per_page: 10
   <% end %>
 <% end %>
 
-<% page_articles.each_with_index do |article, i| %>
-  <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
-  <!-- use article.summary(250) if you have Nokogiri available to show just
-       the first 250 characters -->
-  <%= article.body %>
-<% end %>
+<div class="latest-post">
+  <% blog.articles[0...1].each do |article| %>
+    <img src="images/<%= article.data.image %>">
+
+    <h2><a href="<%= article.url %>"><%= article.title %></a></h2>
+  <% end %>
+</div>
 
 <% if paginate %>
   <% if next_page %>
