--- a/source/layout.erb
+++ b/source/layout.erb
@@ -14,7 +14,15 @@
 
     <div id="main" role="main">
       <header>
-
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Projects</a></li>
+          </ul>
+        </nav>
       </header>
 
       <%= yield %>
