--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,6 +18,8 @@ per_page: 10
   <% end %>
 </div>
 
+<div class=""
+
 <% if paginate %>
   <% if next_page %>
     <p><%= link_to 'Next page', next_page %></p>
