--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,7 +18,17 @@ per_page: 10
   <% end %>
 </div>
 
-<div class=""
+<div class="container">
+  <div class="row">
+    <div class="four-columns-special column offset-30">
+      This is a special column size
+    </div>
+
+    <div class="seven-columns column">
+      this is seven columns big
+    </div>
+  </div>
+</div>
 
 <% if paginate %>
   <% if next_page %>
