--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -54,8 +54,24 @@ nav ul li {
 	margin-left: 2.083333333333333%;
 }
 
+.column:first-child {
+	margin: 0;
+}
+
 .row {
 	clear: both;
+}
+
+.offset-30 {
+	margin-left: 3.125% !important;
+}
+
+.four-columns-special {
+	width: 37.5%;
+}
+
+.seven-columns {
+	width: 56.25%;
 }
 
 .latest-post {
