--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,23 +11,51 @@ per_page: 10
 <% end %>
 
 <div class="latest-post">
-  <% blog.articles[0...1].each do |article| %>
+  <% blog.articles.select {|a| a.data.category != "projects"}[0...1].each do |article| %>
     <img src="images/<%= article.data.image %>">
-
     <h2><a href="<%= article.url %>"><%= article.title %></a></h2>
   <% end %>
 </div>
 
-<div class="container">
-  <div class="row">
-    <div class="four-columns-special column offset-30">
-      This is a special column size
-    </div>
-
-    <div class="seven-columns column">
-      this is seven columns big
-    </div>
+<div class="row clearfix">
+  <div class="four-columns-special column offset-30">
+    <h3>Categories</h3>
   </div>
+
+  <div class="seven-columns column clearfix">
+    <h3>Recent Posts</h3>
+
+    <ul class="recent-post-list">
+      <% blog.articles.select {|a| a.data.category != "projects"}[1..2].each do |article| %>
+        <li class="clearfix">
+          <img class="post-thumbnail" src="images/<%= article.data.image %>">
+
+          <div class="recent-post-details">
+            <h2><a href="<%= article.url %>"><%= article.title %></a></h2>
+            <p><%= article.summary %></p>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+
+<div class="projects row">
+  <span class="projects-sub">What I'm Working On</span>
+  <h4>Recent Projects</h4>
+
+  <ul class="project-list">
+    <% blog.articles.select {|a| a.data.category == "projects"}[0..2].each do |article| %>
+      <li>
+        <span><%= article.date.strftime('%Y.%m.%d') %></span>
+        <h2><a href="<%= article.data.permalink %>/"><%= article.title %></a></h2>
+      </li>
+    <% end %>
+  </ul>
+</div>
+
+<div class="row">
+  This is my book reading list
 </div>
 
 <% if paginate %>
