--- a/source/layout.erb
+++ b/source/layout.erb
@@ -53,5 +53,6 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="./javascripts/main.js"></script>  
+    <script src="./javascripts/plugins.js"></script>
   </body>
 </html>
