--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -55,7 +55,7 @@ per_page: 10
 </div>
 
 <div class="row">
-  This is my book reading list<strong></strong>
+  This is my book reading list
 </div>
 
 <% if paginate %>
