--- a/source/_header.erb
+++ b/source/_header.erb
@@ -12,7 +12,7 @@
 
     <img class="logo" src="/images/header-logo.png">
 
-    <div id="main" role="main">
+    <div class="main" role="main">
       <header>
         <nav>
           <ul>
@@ -24,3 +24,4 @@
           </ul>
         </nav>
       </header>
+    </div>
