--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,3 +2,60 @@
 pageable: true
 per_page: 10
 ---
+<div class="container">
+  <div class="latest-post">
+    <% blog.articles.select {|a| a.data.category != "projects"}[0...1].each do |article| %>
+      <% article_image = article.data.image %>
+      <%= image_tag "#{article_image}" %>
+      <h2><a href="<%= article.url %>"><%= article.title %></a></h2>
+    <% end %>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row clearfix">
+    <div class="four-columns-special column offset-30">
+      <h3>Categories</h3>
+    </div>
+
+    <div class="seven-columns column clearfix">
+      <h3>Recent Posts</h3>
+
+      <ul class="recent-post-list">
+        <% blog.articles.select {|a| a.data.category != "projects"}[1..2].each do |article| %>
+          <li class="clearfix">
+            <% article_image = article.data.image %>
+            <%= image_tag "#{article_image}", class: "post-thumbnail" %>
+
+            <div class="recent-post-details">
+              <h2><a href="<%= article.url %>"><%= article.title %></a></h2>
+              <p><%= article.summary %></p>
+            </div>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="projects row">
+    <span class="projects-sub">What I'm Working On</span>
+    <h4>Recent Projects</h4>
+
+    <ul class="project-list">
+      <% blog.articles.select {|a| a.data.category == "projects"}[0..2].each do |article| %>
+        <li>
+          <span><%= article.date.strftime('%Y.%m.%d') %></span>
+          <h2><a href="/<%= article.data.permalink %>/"><%= article.title %></a></h2>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    This is my book reading list
+  </div>
+</div>
