added new articles

--- a/source/articles/2014-02-12-deploy-middleman.html.erb
+++ b/source/articles/2014-02-12-deploy-middleman.html.erb
@@ -7,7 +7,8 @@ layout: articles-layout
 ---
 
 <blockquote>
-	Hi
+	"This Is Where a Quote Goes!"
+	<span>-Nelsol Batalla</span>
 </blockquote>
 
-<p>Watch closely as I try to explain the dark arts of Middleman deployment to Github.</p>
+<p>Watch closely as I try to explain the dark arts of Middleman deployment to Github. Testing to see how it looks when it wraps around the container.</p>
