added blog posts

--- a/source/articles/2014-02-14-the-first-week.html.erb
+++ b/source/articles/2014-02-14-the-first-week.html.erb
@@ -23,5 +23,4 @@ layout: articles-layout
 
 <p>So what have I been working on? My first assignment was to read <strong>Thinking With Type</strong>, a book on how to use fonts, I had to follow up this reading assignment with an accompanying project site outlining what I learned, you can view that <a href="/typography-deux/">here</a>. I also had to build a blog which you are currently viewing now.</p>
 
-<p>I apologize for the lack of knowledge sharing in this post. I promise the next ones will have a bit more substance to them. Until next time.</p>
-
+<p>I apologize for the lack of knowledge sharing in this post. In my upcoming posts, I'll talk a bit about type, and how I customized this blog using Middleman. Until next time.</p>
