--- a/source/_header.erb
+++ b/source/_header.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
-    <title>Blog Title<%= ' - ' + current_article.title unless current_article.nil? %></title>
+    <title>Nelsol Batalla<%= ' - ' + current_article.title unless current_article.nil? %></title>
     <%= stylesheet_link_tag 'normalize' %>
     <link href="/stylesheets/main.css" media="screen" rel="stylesheet" type="text/css" />
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
