updated blog post

--- a/source/articles/2014-02-14-customizing-middleman.html.erb
+++ b/source/articles/2014-02-14-customizing-middleman.html.erb
@@ -12,5 +12,5 @@ layout: articles-layout
 	<span>-Me</span>
 </blockquote>
 
-<p>For as long as I can remember I have always tweaked </p>
+<p>For as long as I can remember I have never been satisfied with leaving things as is.</p>
 
