updated blog post

--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -112,8 +112,20 @@ nav ul li {
 	width: 62.5%;
 }
 
+.article-body h3 {
+	margin: 1.25em 0 0 0;
+}
+
 .article-body p {
 	margin: 1.875em 0 0 0;
+}
+
+.article-body ul {
+	margin: 1.25em 0 0 0;
+	list-style: circle;
+}
+.article-body ul li {
+	margin: 1.25em 0 0 0;
 }
 
 .latest-post {
