--- a/source/articles/2014-02-14-the-first-week.html.erb
+++ b/source/articles/2014-02-14-the-first-week.html.erb
@@ -2,7 +2,7 @@
 title: The First Week
 date: 2014-02-14 04:36 UTC
 category: General
-image: test-image.jpg
+image: first-week.jpg
 layout: articles-layout
 ---
 
@@ -12,4 +12,21 @@ layout: articles-layout
 	<span>-Nelsol Batalla</span>
 </blockquote>
 
-<p>Re-worked.</p>
+<p>Part of being an apprentice at 8th Light is to document our apprenticeship via blogging. I want to start off my very first blog post by reflecting on my first week at 8th Light.</p>
+
+<p>To say that my first week flew by would be an understatement. Time truly does fly when you're having fun, it's exciting to be in the mix again since graduating DBC.</p>
+
+<h3>Clojure and Hiccup</h3>
+
+<p>One of the earliest experiences that sticks out in my memory is a pairing session I had with my mentor Stephanie. She was working on a project written in Clojure using Hiccup. Hiccup is a library for representing HTML in Clojure. I haven't ever coded in Clojure before, I liken the experience to getting a new toy. Here's a code snippet to give you an idea of what Clojure/Hiccup looks like:</p>
+
+<p><script src="https://gist.github.com/nbatalla03/9044901.js"></script></p>
+
+<h3>Reading Materials</h3>
+
+<p>The very first book that was assigned to me was <strong><em>Thinking With Type</em></strong>. I'll be honest, my typical process for selecting fonts has been selecting fonts that I thought look good visually. Ellen Lupton, the author of Thinking With Type has redefined my process and the way I think about fonts. It's simply not enough to pick a font that looks good, one must consider the audience, content, layout, and other factors before settling on a font. I also created a project which accompanied my reading, you can view that <a href="/typography-deux/">here</a>.</p>
+
+<h3>Blogging Tool - Middleman</h3>
+<p>I'm using Middleman as my blogging tool. Although it's probably more accurate to describe Middleman as a static site generator. I'll be going over how I customized Middleman to fit my needs in upcoming posts.</p>
+
+<p>Until next time.</p>
