--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -54,8 +54,8 @@ per_page: 10
   </div>
 </div>
 
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     This is my book reading list
   </div>
-</div>
+</div> -->
