--- a/source/articles/2014-02-14-the-first-week.html.erb
+++ b/source/articles/2014-02-14-the-first-week.html.erb
@@ -24,7 +24,7 @@ layout: articles-layout
 
 <h3>Reading Materials</h3>
 
-<p>The very first book that was assigned to me was <strong><em>Thinking With Type</em></strong>. I'll be honest, my typical process for selecting fonts has been selecting fonts that I thought look good visually. Ellen Lupton, the author of Thinking With Type has redefined my process and the way I think about fonts. It's simply not enough to pick a font that looks good, one must consider the audience, content, layout, and other factors before settling on a font. I also created a project which accompanied my reading, you can view that <a href="/typography-deux/">here</a>.</p>
+<p>The very first book that was assigned to me was <strong><em>Thinking With Type</em></strong>. I'll be honest, my typical process for selecting fonts has been selecting fonts that I thought look good visually. Ellen Lupton, the author of Thinking With Type has redefined my process and the way I think about fonts. It's simply not enough to pick a font that looks good, one must consider the audience, content, layout, and other factors before settling on a font. Part of the reading assigment required an accompanying typography site, showcasing what I learned, you can view that <a href="/typography-deux/">here</a>.</p>
 
 <h3>Blogging Tool - Middleman</h3>
 <p>I'm using Middleman as my blogging tool. Although it's probably more accurate to describe Middleman as a static site generator rather than a blogging tool such as Wordpress. I'll be going over how I customized Middleman to fit my needs in upcoming posts.</p>
