added blog post

--- a/source/articles/2014-02-14-customizing-middleman.html.erb
+++ b/source/articles/2014-02-14-customizing-middleman.html.erb
@@ -2,15 +2,24 @@
 title: Customizing Middleman
 date: 2014-02-14 13:57 UTC
 category: Tutorial
-image: test-image.jpg
+image: customizing-middleman.jpg
 layout: articles-layout
 
 ---
 
 <blockquote>
 	I like to tinker... Which is why I couldn't roll out a vanilla version of Middleman.
-	<span>-Me</span>
+	<!-- <span>-Me</span> -->
 </blockquote>
 
-<p>For as long as I can remember I have never been satisfied with leaving things as is.</p>
+<p>For as long as I can remember I have always tinkered. Whether it's deconstructing my remote control cars, to building my own gaming computers. This tendancy now spills over to web development.</p>
 
+<p>The intention of this blog post is not to be an exhaustive tutorial on customizing Middleman, instead I'll cover a few things I customized to fit my needs.</p>
+
+<h3>Custom Loops</h3>
+<p>If you view the homepage of my blog you'll notice that the most recent post takes up a large chunk of the real estate with a large image and the title encapsulated within a red box. Below that you'll find two recent blog posts (at the time of writing this there is only one).</p>
+
+
+# Show image with arrows pointing to elemenets discussed in previous paragraph.
+# Using front matter to assign images (maybe even show what the data structure looks like)
+# Custom query to iterate over project category
