--- a/source/articles/2014-02-14-the-first-week.html.erb
+++ b/source/articles/2014-02-14-the-first-week.html.erb
@@ -9,7 +9,7 @@ layout: articles-layout
 
 <blockquote id="start">
 	"I haven't ever coded in Clojure before, I liken the experience to getting a new toy."
-	<span>-Nelsol Batalla</span>
+	<!-- <span>-Nelsol Batalla</span> -->
 </blockquote>
 
 <p>Part of being an apprentice at 8th Light is to document our apprenticeship via blogging. I want to start off my very first blog post by reflecting on my first week at 8th Light.</p>
