this is a bad commit

--- a/source/_header.erb
+++ b/source/_header.erb
@@ -6,22 +6,15 @@
     <title>Nelsol Batalla<%= ' - ' + current_article.title unless current_article.nil? %></title>
     <%= stylesheet_link_tag 'normalize' %>
     <link href="/stylesheets/main.css" media="screen" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="//use.typekit.net/vzq4zjc.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
   </head>
   <body>
 
-    <img class="logo" src="/images/header-logo.png">
-
-    <div class="main" role="main">
-      <header>
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Projects</a></li>
-          </ul>
-        </nav>
-      </header>
-    </div>
+    <header>
+      <div class="logo">
+        <h1>Nelsol Batalla</h1>
+        <p>8th Light Apprentice</p>
+      </div>
+    </header>
