--- a/source/layouts/articles-layout.erb
+++ b/source/layouts/articles-layout.erb
@@ -1,19 +1,8 @@
 <%= partial "_header" %>
 
-<div class="container">
-	<% article_data = current_article.data %>
-  <div class="latest-post">
-      <%= image_tag "#{article_data["image"]}" %>
-      <h2><a href="<%= article_data["url"] %>"><%= article_data["title"] %></a></h2>
-  </div>
-</div>
-
-<div class="container">
-	<div class="row">
-		<div class="article-body offset-30">
-			<%= yield %>
-		</div>
-	</div>
+<div class="container article-page">
+  <h2><%= current_article.title %></h2>
+  <%= yield %>
 </div>
 
 <%= partial "_footer" %>
