--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,7 @@ pageable: true
 per_page: 10
 ---
 <div class="container">
-  <div class="row">
+  <div class="row clearfix">
     <div class="one-third column">
       <div class="profile">
         <div class="holder">
