--- a/source/articles/2014-02-12-deploy-middleman.html.erb
+++ b/source/articles/2014-02-12-deploy-middleman.html.erb
@@ -6,9 +6,7 @@ image: test-image.jpg
 layout: articles-layout
 ---
 
-<blockquote>
-	"This Is Where a Quote Goes!"
-	<span>-Nelsol Batalla</span>
-</blockquote>
+
+SPLIT_SUMMARY_BEFORE_THIS
 
 <p>Watch closely as I try to explain the dark arts of Middleman deployment to Github. Testing to see how it looks when it wraps around the container.</p>
