--- a/source/articles/2014-02-14-customizing-middleman.html.erb
+++ b/source/articles/2014-02-14-customizing-middleman.html.erb
@@ -4,12 +4,13 @@ date: 2014-02-14 13:57 UTC
 category: Tutorial
 image: customizing-middleman.jpg
 layout: articles-layout
-
 ---
 
 <blockquote>
 	I like to tinker... Which is why I couldn't roll out a vanilla version of Middleman.
 </blockquote>
+
+SPLIT_SUMMARY_BEFORE_THIS
 
 <p>For as long as I can remember I have always tinkered. Whether it's deconstructing my remote control cars, to building my own gaming computers. This tendancy now spills over to web development.</p>
 
