--- a/source/articles/2014-02-14-the-first-week.html.erb
+++ b/source/articles/2014-02-14-the-first-week.html.erb
@@ -12,6 +12,8 @@ layout: articles-layout
 	<!-- <span>-Nelsol Batalla</span> -->
 </blockquote>
 
+SPLIT_SUMMARY_BEFORE_THIS
+
 <p>Part of being an apprentice at 8th Light is to document our apprenticeship via blogging. I want to start off my very first blog post by reflecting on my first week at 8th Light.</p>
 
 <p>To say that my first week flew by would be an understatement. Time truly does fly when you're having fun, it's exciting to be in the mix again since graduating DBC.</p>
