--- a/source/_header.erb
+++ b/source/_header.erb
@@ -6,15 +6,12 @@
     <title>Nelsol Batalla<%= ' - ' + current_article.title unless current_article.nil? %></title>
     <%= stylesheet_link_tag 'normalize' %>
     <link href="/stylesheets/main.css" media="screen" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="//use.typekit.net/vzq4zjc.js"></script>
+    <script type="text/javascript" src="//use.typekit.net/yhs2ngl.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
   </head>
   <body>
 
     <header>
-      <div class="logo">
-        <h1>Nelsol Batalla</h1>
-        <p>8th Light Apprentice</p>
-      </div>
+      <div class="logo">Nelsol + Batalla</div>
     </header>
