--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,6 +3,7 @@ pageable: true
 per_page: 10
 ---
 <div class="sidebar">
+  <img src="#">
   <p>Hi, my name is</p>
   <p><strong>Nelsol Batalla!</strong></p>
   <p>I'm a UX Apprentice</p>
