--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,7 @@ pageable: true
 per_page: 10
 ---
 <div class="sidebar">
-  <img src="#">
+  <%= image_tag 'avatar.jpg', :class => 'avatar' %>
   <p>Hi, my name is</p>
   <p><strong>Nelsol Batalla!</strong></p>
   <p>I'm a UX Apprentice</p>
@@ -20,13 +20,15 @@ per_page: 10
 </div>
 
 <div class="main">
-  <div class="articles">
-    <h3>Blog</h3>
-    <span class="date">February 25, 2014</span>
-    <h2>Customizing Middleman</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget volutpat diam, eget tristique nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-    <span class="separator"></span>
-  </div>
+  <% blog.articles.select {|a| a.data.category != "projects"}[0..10].each do |article| %>
+    <div class="articles">
+      <h3>Blog</h3>
+      <span class="date">February 25, 2014</span>
+      <h2><a href="<%= article.url %>"><%= article.title %></a></h2>
+      <p><%= article.summary %></p>
+      <span class="separator"></span>
+    </div>
+  <% end %>
 
   <div class="articles">
     <h3>Blog</h3>
