--- a/source/layouts/articles-layout.erb
+++ b/source/layouts/articles-layout.erb
@@ -1,6 +1,6 @@
 <%= partial "_header" %>
 
-<div class="container article-page">
+<div class="single-article">
   <div class="row">
     <h2><%= current_article.title %></h2>
     <%= yield %>
