--- a/source/layouts/articles-layout.erb
+++ b/source/layouts/articles-layout.erb
@@ -1,10 +1,8 @@
 <%= partial "_header" %>
 
-<div class="single-article">
-  <div class="row">
-    <h2><%= current_article.title %></h2>
-    <%= yield %>
-  </div>
+<div class="single-article articles">
+  <h2><%= current_article.title %></h2>
+  <%= yield %>
 </div>
 
 <%= partial "_footer" %>
