--- a/source/layouts/articles-layout.erb
+++ b/source/layouts/articles-layout.erb
@@ -1,6 +1,7 @@
 <%= partial "_header" %>
 
 <div class="single-article articles">
+  <h3>Blog</h3>
   <h2><%= current_article.title %></h2>
   <%= yield %>
 </div>
