--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -124,11 +124,15 @@ strong {
  .single-article h2 {
    font-size: 2.986em;
  }
- .single-article h3 {
+ .single-article h4 {
    color: #aaa;
    border: none;
    margin: 2.074em 0 0 0;
    padding: 0;
+   font: normal 1.44em "futura-pt";
+   font-weight: 700;
+   letter-spacing: 2px;
+   text-transform: uppercase;
  }
 
 /* misc */
