--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -23,7 +23,7 @@ per_page: 10
   <% blog.articles.select {|a| a.data.category != "projects"}[0..10].each do |article| %>
     <div class="articles">
       <h3>Blog</h3>
-      <span class="date">February 25, 2014</span>
+      <span class="date"><%= article.date.strftime('%b %e, %Y') %></span>
       <h2><a href="<%= article.url %>"><%= article.title %></a></h2>
       <p><%= article.summary %></p>
       <span class="separator"></span>
