--- a/source/layouts/articles-layout.erb
+++ b/source/layouts/articles-layout.erb
@@ -2,6 +2,7 @@
 
 <div class="single-article articles">
   <h3>Blog</h3>
+  <span class="date"><%= current_article.date.strftime('%b %e, %Y') %></span>
   <h2><%= current_article.title %></h2>
   <%= yield %>
 </div>
