added code for project list

--- a/source/_header.erb
+++ b/source/_header.erb
@@ -13,5 +13,5 @@
   <body>
 
     <header>
-      <div class="logo">Nelsol + Batalla</div>
+      <div class="logo"><a href="/">Nelsol + Batalla</a></div>
     </header>
