--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,8 +13,9 @@ per_page: 10
     <h3>Projects</h3>
 
     <ul>
-      <li>Tyopgraphy</li>
-      <li>Positioning</li>
+      <% blog.articles.select {|a| a.data.category == "projects"}[0..10].each do |article| %>
+        <li><a href="<%= article.data.permalink %>"><%= article.title %></a></li>
+      <% end %>
     </ul>
   </div>
 </div>
