--- a/source/_header.erb
+++ b/source/_header.erb
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
     <title>Nelsol Batalla<%= ' - ' + current_article.title unless current_article.nil? %></title>
+    <meta name="viewport" content="width=device-width; initial-scale=1.0">
     <%= stylesheet_link_tag 'normalize' %>
     <link href="/stylesheets/main.css" media="screen" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="//use.typekit.net/yhs2ngl.js"></script>
