--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -190,13 +190,18 @@ strong {
 
   .main {
     float: none;
+    padding-top: 2.986em;
     width: 100%;
     text-align: center;
+  }
+  
+  .articles {
+    margin-top: 2.986em;
   }
 }
 
 @media screen and (max-width: 430px) {
   .sidebar p {
-    font-size: 2.488em;
+    font-size: 2.074em;
   }
 }
