changed font size in smaller window sizes

--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -201,7 +201,15 @@ strong {
 }
 
 @media screen and (max-width: 430px) {
+  h2 {
+    font-size: 1.44em;
+  }
+
   .sidebar p {
     font-size: 2.074em;
+  }
+
+  .articles p {
+    font-size: 1em;
   }
 }
