centered logo at smaller screens

--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -176,6 +176,10 @@ strong {
 }
 
 @media screen and (max-width: 880px) {
+  header {
+    text-align: center;
+  }
+
   .sidebar {
     float: none;
     font-size: 100%;
