--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -187,6 +187,11 @@ strong {
     text-align: center;
   }
 
+  .project-list ul {
+    border-bottom: 1px solid #eee;
+    padding-bottom: 1.2em;
+  }
+
   .project-list ul li {
     display: inline;
     float: none;
@@ -194,6 +199,7 @@ strong {
 
   .main {
     float: none;
+    padding-bottom: 4.3em;
     padding-top: 2.986em;
     width: 100%;
     text-align: center;
